Add pattern on "Single Use Object Capabilities"

--- a/config.toml
+++ b/config.toml
@@ -40,3 +40,8 @@ uglyURLs = true
   weight = 40
   identifier = "testing"
 
+[[menu.toc]]
+  name = "Capabilities"
+  weight = 50
+  identifier = "capabilities"
+
