--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -83,6 +83,7 @@ nav:
     - Notifier: 'code-sharing/notifier.md'
   - Creation Patterns:
     - Overview: 'creation/index.md'
+    - Static Constructor: 'creation/static-constructor.md'
     - Supply Chain: 'creation/supply-chain.md'
   - Data Sharing Patterns:
     - Overview: 'data-sharing/index.md'
