Turn on navigation footer
It was made optional and that caused it to be turned off for us.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,7 @@ theme:
   features:
     - content.code.copy
     - content.code.select
+    - navigation.footer
     - navigation.indexes
     - navigation.instant
     - navigation.sections
